--- a/.github/workflows/splinter.yml
+++ b/.github/workflows/splinter.yml
@@ -1,17 +1,9 @@
-name: Super-Linter
-
-on: push
-
+name: CI Pipeline
+on: [push]
 jobs:
-  super-lint:
-    name: Lint code base
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Run Super-Linter
-        uses: github/super-linter@v4
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: Run a script
+        run: echo 'Hello, World!'
